kubernetes/app/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: bastientlc/worker:latest
